--- a/views/header.ejs
+++ b/views/header.ejs
@@ -198,7 +198,16 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="assets/images/users/1.jpg" alt="user" class="rounded-circle" width="31"></a>
                             <div class="dropdown-menu dropdown-menu-right user-dd animated">
-                                <a class="dropdown-item" href="javascript:void(0)"><i class="ti-user m-r-5 m-l-5"></i> My Profile</a>
+                                <div class="dropdown-item d-flex align-items-center">
+                                    <div>
+                                        <img src="assets/images/users/1.jpg" alt="user" class="rounded-circle" width="40">
+                                    </div>
+                                    <div class="p-2">
+                                        <h4 class="m-0"><%= locals.users.name %></h4>
+                                        <h5 class="m-0"><%= locals.users.email %></h5>
+                                    </div>
+                                </div>
+                                <a class="dropdown-item" href="/profile"><i class="ti-user m-r-5 m-l-5"></i> My Profile</a>
                                 <a class="dropdown-item" href="javascript:void(0)"><i class="ti-wallet m-r-5 m-l-5"></i> My Balance</a>
                                 <a class="dropdown-item" href="javascript:void(0)"><i class="ti-email m-r-5 m-l-5"></i> Inbox</a>
                                 <div class="dropdown-divider"></div>
@@ -235,6 +244,7 @@
                                 <li class="sidebar-item"><a href="/viewblog" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> View Blog </span></a></li>
                             </ul>
                         </li>
+                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/newpassword" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu">New Password</span></a></li>
                     </ul>
                 </nav>
                 <!-- End Sidebar navigation -->
