--- a/views/newpassword.ejs
+++ b/views/newpassword.ejs
@@ -36,6 +36,16 @@
                         <input type="hidden" value="<%= locals.users.id %>" name="editid">
                         <div class="card-body">
                             <h4 class="card-title">New Password</h4>
+                            <% if(message.danger.length> 0){ %>
+                                <div class="alert alert-danger" role="alert">
+                                    <%= message.danger %>
+                                </div>
+                            <% } %>
+                            <% if(message.success.length> 0){ %>
+                                <div class="alert alert-success" role="alert">
+                                    <%= message.success %>
+                                </div>
+                            <% } %>
                             <div class="form-group row">
                                 <label for="fname" class="col-sm-3 text-right control-label col-form-label">New Password</label>
                                 <div class="col-sm-9">
