--- a/views/otp.ejs
+++ b/views/otp.ejs
@@ -44,21 +44,20 @@
                     <div class="text-center p-t-20 p-b-20">
                         <span class="db"><img src="assets/images/logo.png" alt="logo" /></span>
                     </div>
+                    <% if(message.danger.length> 0){ %>
+                        <div class="alert alert-danger" role="alert">
+                            <%= message.danger %>
+                        </div>
+                    <% } %>
                     <!-- Form -->
-                    <form method="post" class="form-horizontal m-t-20" id="loginform" action="/loginData">
+                    <form method="post" class="form-horizontal m-t-20" id="loginform" action="/enterotp">
                         <div class="row p-b-30">
                             <div class="col-12">
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text bg-success text-white" id="basic-addon1"><i class="ti-user"></i></span>
                                     </div>
-                                    <input type="text" name="email" class="form-control form-control-lg" placeholder="Useremail" aria-label="Username" aria-describedby="basic-addon1" required="">
-                                </div>
-                                <div class="input-group mb-3">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text bg-warning text-white" id="basic-addon2"><i class="ti-pencil"></i></span>
-                                    </div>
-                                    <input type="text" name="password" class="form-control form-control-lg" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" required="">
+                                    <input type="text" name="otp" class="form-control form-control-lg" placeholder="Enter OTP" aria-label="Username" aria-describedby="basic-addon1" required="">
                                 </div>
                             </div>
                         </div>
@@ -66,42 +65,12 @@
                             <div class="col-12">
                                 <div class="form-group">
                                     <div class="p-t-20">
-                                        <button class="btn btn-info" id="to-recover" type="button"><i class="fa fa-lock m-r-5"></i> Lost password?</button>
-                                        <button class="btn btn-success float-right" type="submit">Login</button>
+                                        <button class="btn btn-success float-right" type="submit">Enter OTP</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </form>
-                </div>
-                <div id="recoverform">
-                    <div class="text-center">
-                        <span class="text-white">Enter your e-mail address below and we will send you instructions how to recover a password.</span>
-                    </div>
-                    <% if(message.danger.length> 0){ %>
-                        <div class="alert alert-danger" role="alert">
-                            <%= message.danger %>
-                        </div>
-                    <% } %>
-                    <div class="row m-t-20">
-                        <!-- Form -->
-                        <form method="post" class="col-12" action="/forgotpassword">
-                            <!-- email -->
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text bg-danger text-white" id="basic-addon1"><i class="ti-email"></i></span>
-                                </div>
-                                <input type="text" name="email" class="form-control form-control-lg" placeholder="Email Address" aria-label="Username" aria-describedby="basic-addon1">
-                            </div>
-                            <!-- pwd -->
-                            <div class="row m-t-20 p-t-20 border-top border-secondary">
-                                <div class="col-12">
-                                    <a class="btn btn-success" href="#" id="to-login" name="action">Back To Login</a>
-                                    <button class="btn btn-info float-right" type="submit">Recover</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
                 </div>
             </div>
         </div>
