--- a/views/viewblog.ejs
+++ b/views/viewblog.ejs
@@ -35,6 +35,16 @@
                         <div class="card-body">
                             <h5 class="card-title m-b-0">View Blog</h5>
                         </div>
+                        <% if(message.danger.length> 0){ %>
+                            <div class="alert alert-danger" role="alert">
+                                <%= message.danger %>
+                            </div>
+                        <% } %>
+                        <% if(message.success.length> 0){ %>
+                            <div class="alert alert-success" role="alert">
+                                <%= message.success %>
+                            </div>
+                        <% } %>
                         <table class="table text-center">
                             <thead>
                                 <tr style="font-size: 25px">
