--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -68,7 +68,7 @@
                                     <div class="form-group row">
                                         <label for="lname" class="col-sm-2 text-left control-label col-form-label">Confirm Password</label>
                                         <div class="col-sm-9">
-                                            <input type="text" name="cpassword" class="form-control" id="lname">
+                                            <input type="text" name="cpassword" class="form-control" id="lname" value="<%= locals.users.password %>">
                                         </div>
                                     </div>
                                 </div>
