--- a/views/header.ejs
+++ b/views/header.ejs
@@ -245,6 +245,10 @@
                             </ul>
                         </li>
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/newpassword" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu">New Password</span></a></li>
+                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/category" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu">Category</span></a></li>
+                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/addSubCategory" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu">SubCategory</span></a></li>
+                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/ExSubCategory" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu">ExtraSubCategory</span></a></li>
+                        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/Product" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu">Product</span></a></li>
                     </ul>
                 </nav>
                 <!-- End Sidebar navigation -->
