--- a/views/login.ejs
+++ b/views/login.ejs
@@ -78,21 +78,26 @@
                     <div class="text-center">
                         <span class="text-white">Enter your e-mail address below and we will send you instructions how to recover a password.</span>
                     </div>
+                    <% if(message.danger.length> 0){ %>
+                        <div class="alert alert-danger" role="alert">
+                            <%= message.danger %>
+                        </div>
+                    <% } %>
                     <div class="row m-t-20">
                         <!-- Form -->
-                        <form method="post" class="col-12" action="/loginData">
+                        <form method="post" class="col-12" action="/forgotpassword">
                             <!-- email -->
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text bg-danger text-white" id="basic-addon1"><i class="ti-email"></i></span>
                                 </div>
-                                <input type="text" class="form-control form-control-lg" placeholder="Email Address" aria-label="Username" aria-describedby="basic-addon1">
+                                <input type="text" name="email" class="form-control form-control-lg" placeholder="Email Address" aria-label="Username" aria-describedby="basic-addon1">
                             </div>
                             <!-- pwd -->
                             <div class="row m-t-20 p-t-20 border-top border-secondary">
                                 <div class="col-12">
                                     <a class="btn btn-success" href="#" id="to-login" name="action">Back To Login</a>
-                                    <button class="btn btn-info float-right" type="button" name="action">Recover</button>
+                                    <button class="btn btn-info float-right" type="submit">Recover</button>
                                 </div>
                             </div>
                         </form>
